Fixing minor spacing issues

--- a/app/styles/future.less
+++ b/app/styles/future.less
@@ -4,7 +4,6 @@
 	.nav { 
 		.max-width-centered;
 		padding-top: 10px;
-		width: 940px;
 	}
 	.nav-pills > li > a {
 		background-color: white;
@@ -21,19 +20,18 @@
 		text-align: center;
 		padding-bottom: 20px;
 
-		@icon-size: 150px;
+		@icon-size: 75px;
 
 		.icon {
 			width: @icon-size;
 			height: @icon-size;
 			display: inline-block;
+			margin-left: 40px;
+			margin-right: 40px;
 		}
 
 		.evenly { 
-			.image-content-fill('/images/evenly-square.png');
-			width: 90px;
-			height: 90px; 
-			margin-top: -20px;
+			.image-content-fill('/images/square-evenly.png');
 		}
 
 		.square { .image-content-fill('/images/square.png'); }
@@ -45,11 +43,9 @@
 			color: @black;
 			position: absolute;
 			margin-left: -15px;
-			margin-top: 35px;
 		}
 
 		.text {
-			margin-top: -20px;
 			font-size: 25px;
 		}
 	}
